--- a/serverless.yml
+++ b/serverless.yml
@@ -30,8 +30,8 @@ provider:
   name: aws
   runtime: nodejs12.x
   region: eu-central-1
-  stage: prod
-  # lambdaHashingVersion: 20201221
+  stage: test
+ 
 
 # you can overwrite defaults here
 #  stage: dev
